sort.dutchflag.DutchFlagAlgo.scala.error
Erreur de compilation :
DutchFlagAlgo:22: error: ';' expected but '.' found.
Retourne le nombre de lignes sur ce drapeau.
                                           ^DutchFlagAlgo:34: error: ';' expected but symbol literal found.
Renvoi si le monde actuel est sélectionné dans l'interface graphique 
                                                ^