sort.dutchflag.DutchFlagAlgo.scala.code
def solve() {
}












echange(x:Int, y:Int)

Échange les lignes numéros x et y.

getTaille()  :Int

Retourne le nombre de lignes sur ce drapeau.

getCouleur(ligne:Int)  :Int

Retourne la couleur d'une ligne donnée.

estTrie() :Boolean

Renvoie si le drapeau est correctement trié.

estSelectionne() :Boolean

Renvoi si le monde actuel est sélectionné dans l'interface graphique